Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86546

Tracegen error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.2
    • 5.15.1
    • Build System
    • None
    • Windows
    • 756c65d3676d2b3ce5c7b56145e5f0f7cf7178ad (qt/qtbase/dev) 80d3b30a054e55f627ba6a88a4969251691a7a60 (qt/qtbase/5.15)

      https://github.com/qt/qtbase/blob/5.15.1/src/gui/qtgui.tracepoints#L30

      This space before closing bracket causes an error:

      tracegen: fatal: Missing parameter type for argument 0 of QImage_transformed_entry (D:/dev/Qt/5.15.1/qtbase/src/gui/qtgui.tracepoints:30)

       

      Removing space helps.

       

      Invocation:

      "D:/dev/Qt/5.15.1/.sw/out/824997/qtproject.qt.base.tools.tracegen-5.15.1.exe" ^
      "etw" ^
      "D:/dev/Qt/5.15.1/qtbase/src/gui/qtgui.tracepoints" ^
      "D:\\dev\\Qt\\5.15.1\\.sw\\t\\824997\\376a3a\\bd
      qtgui_tracepoints_p.h" %*

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            egorpugin Egor Pugin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes