src/tools/tracegen/lttng.cpp
@@ -98,7 +98,8 @@ static void writeCtfMacro(QTextStream &stream, const Tracepoint::Field &field)
                << "ctf_integer(int, height, " << name << ".height()) ";
         return;
     case Tracepoint::Field::Unknown:
-        panic("Cannot deduce CTF type for '%s %s", qPrintable(paramType), qPrintable(name));
+        justified_worry("Cannot deduce CTF type for '%s %s'", qPrintable(paramType),
+                        qPrintable(name));
         break;
     }
 }
