src/tools/tracegen/panic.h
@@ -41,5 +41,6 @@
 #define PANIC_H
 
 void panic(const char *fmt, ...);
+void justified_worry(const char *fmt, ...);
 
 #endif // PANIC_H
